--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="color_primary">#3F51B5</color>
     <color name="color_primary_dark">#303F9F</color>
-    <color name="color_accent">#FF4081</color>
+    <color name="color_accent">#ff4081</color>
+    <color name="color_gray_light">#D3D3D3</color>
+    <color name="color_dim_gray">#696969</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
